# ChangeLog for gnome-extra/synapse
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/synapse/ChangeLog,v 1.22 2013/05/05 12:59:53 jlec Exp $

  05 May 2013; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild:
  Fix correct usage of vala.eclass

  24 Apr 2013; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild:
  vala_depend is a function not a variable

  07 Apr 2013; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild,
  metadata.xml:
  Make all ebuilds use vala.eclass, #463720

  25 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> -synapse-0.2.4.ebuild,
  -synapse-0.2.6.ebuild, -synapse-0.2.8.2.ebuild:
  old

  25 Aug 2012; Samuli Suominen <ssuominen@gentoo.org> synapse-0.2.10.ebuild:
  Remove USE="ayatana" while waiting for GTK+ 3.x port of synapse wrt #411613

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> synapse-0.2.4.ebuild,
  synapse-0.2.6.ebuild, synapse-0.2.8.2.ebuild, synapse-0.2.10.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  24 Apr 2012; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild:
  Progress changes to latest version

  24 Apr 2012; Justin Lecher <jlec@gentoo.org> synapse-0.2.8.2.ebuild:
  Correct deps as zeitgeist itself now shipps the fts extention

*synapse-0.2.10 (19 Mar 2012)

  19 Mar 2012; Justin Lecher <jlec@gentoo.org>
  files/synapse-0.2.8.2-underlinking.patch,
  files/synapse-0.2.8.2-zeitgeist.patch, +synapse-0.2.10.ebuild:
  Version Bump, clean backport of patches against underlinking and
  unconditional linking, #403345

  15 Feb 2012; Justin Lecher <jlec@gentoo.org> synapse-0.2.8.2.ebuild,
  +files/synapse-0.2.8.2-zeitgeist.patch:
  Fix build without zeitgeist support, #403345

  14 Feb 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  ayatana is now global per http://archives.gentoo.org/gentoo-
  dev/msg_f2eb26947d0c86020625a9aeca6f25e4.xml

  12 Feb 2012; Justin Lecher <jlec@gentoo.org> synapse-0.2.8.2.ebuild: