@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/synapse
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/synapse/ChangeLog,v 1.22 2013/05/05 12:59:53 jlec Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/synapse/ChangeLog,v 1.23 2014/01/19 15:20:08 jlec Exp $
+
+  19 Jan 2014; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild:
+  Set max version for vala
 
   05 May 2013; Justin Lecher <jlec@gentoo.org> synapse-0.2.10.ebuild:
   Fix correct usage of vala.eclass
